small refactor + random sats

--- a/server/internal/interface/dashboard/templates/main.templ
+++ b/server/internal/interface/dashboard/templates/main.templ
@@ -34,6 +34,7 @@ templ Layout(bodyContent templ.Component) {
 // BodyScripts defines JavaScript code.
 
 script BodyScripts() {
+	// from 4321 to 0.00004321 with '0' in gray
 	const prettySats = (num) => {
     const length = String(num).length
     if (length > 8) return num
@@ -42,6 +43,7 @@ script BodyScripts() {
     return `<span class="text-gray-400">${prefix}</span>${num}`
   }
 
+  // from 1718963028 to "1w 2d 3h 4m 5s ago" or "in 4m 5s"
 	const prettyTime = (unixtime) => {
     const minute = 60 // timestamp in seconds
     const hour = 60 * minute
@@ -73,11 +75,14 @@ script BodyScripts() {
     return unixtime - now > 0 ? `in ${text}` : `${text} ago`
   }
 
+  // show txid in 31 characters: <first 14 chars>...<last 14 chars>
+	// usefull when window width < 600 pixels
 	const prettyTxId = (text, showChars = 14) => {
     if (text.length < 32) return text
     return `${text.substring(0, showChars)}...${text.substring(text.length - showChars, text.length)}`
   }
 
+  // redirects browser to local path
 	const redirect = (path) => {
     const { origin } = window.location
     window.location = origin + path
