--- a/server/internal/interface/dashboard/templates/main.templ
+++ b/server/internal/interface/dashboard/templates/main.templ
@@ -16,17 +16,17 @@ templ Layout(bodyContent templ.Component) {
 			<link rel="dns-prefetch" href="//fonts.gstatic.com"/>
 			<link rel="preconnect" href="//fonts.googleapis.com" crossorigin/>
 			<link rel="preconnect" href="//fonts.gstatic.com" crossorigin/>
-			<link rel="manifest" href="/static/manifest.json"/>
-			<link rel="apple-touch-icon" href="/static/apple-touch-icon.png"/>
-			<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
-			<link rel="icon" href="/static/favicon.svg" type="image/svg+xml"/>
-			<link rel="icon" href="/static/favicon.png" sizes="any"/>
+			<link rel="manifest" href="static/manifest.json"/>
+			<link rel="apple-touch-icon" href="static/apple-touch-icon.png"/>
+			<link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon"/>
+			<link rel="icon" href="static/favicon.svg" type="image/svg+xml"/>
+			<link rel="icon" href="static/favicon.png" sizes="any"/>
 			<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet"/>
-			<link href="/static/styles.css" rel="stylesheet"/>
+			<link href="static/styles.css" rel="stylesheet"/>
 		</head>
 		<body class="bg-white text-gray-800 p-10" onload={ BodyScripts() }>
 			@bodyContent
-			<script src="/static/scripts.js"></script>
+			<script src="static/scripts.js"></script>
 		</body>
 	</html>
 }
@@ -84,8 +84,9 @@ script BodyScripts() {
 
   // redirects browser to local path
 	const redirect = (path) => {
-    const { origin } = window.location
-    window.location = origin + path
+    const { origin, pathname } = window.location
+		const prefix = pathname.split('/')[1]
+    window.location = origin + '/' + prefix + path
   }
 
 
