--- a/server/internal/interface/dashboard/templates/pages/index.templ
+++ b/server/internal/interface/dashboard/templates/pages/index.templ
@@ -1,18 +1,24 @@
 package pages
 
 import (
+	"github.com/ark-network/ark/internal/core/application"
 	"github.com/ark-network/ark/internal/interface/dashboard/templates/components"
-
-	arkv1 "github.com/ark-network/ark/api-spec/protobuf/gen/ark/v1"
 )
 
 // BodyContent defines HTML content.
-templ HomeBodyContent(balance *arkv1.GetBalanceResponse, sweeps *arkv1.GetScheduledSweepResponse, round *arkv1.GetRoundDetailsResponse, rounds *arkv1.GetRoundsResponse) {
+templ HomeBodyContent(
+	balance *application.ArkProviderBalance,
+	sweeps []application.ScheduledSweep,
+	rounds []string,
+	round *application.RoundDetails,
+) {
 	<div class="grid grid-cols-1 lg:grid-cols-2 gap-4 w-full">
 		<div class="flex flex-col gap-4">
 			@components.Balance(balance)
 			@components.NextSweep(sweeps)
-			@components.RoundDetails(round)
+			if round != nil {
+				@components.RoundDetails(*round)
+			}
 		</div>
 		<div class="flex flex-col gap-4">
 			@components.LastRounds(rounds)
