--- a/server/internal/interface/dashboard/templates/pages/rounds.templ
+++ b/server/internal/interface/dashboard/templates/pages/rounds.templ
@@ -2,10 +2,9 @@ package pages
 
 import (
 	"github.com/ark-network/ark/internal/interface/dashboard/templates/components"
-	arkv1 "github.com/ark-network/ark/api-spec/protobuf/gen/ark/v1"
 )
 
-templ RoundsBodyContent(rounds *arkv1.GetRoundsResponse) {
+templ RoundsBodyContent(rounds []string) {
 	<div class="grid grid-cols-1 lg:grid-cols-2 gap-4 w-full">
 		<div class="flex flex-col gap-4">
 			@components.LastRounds(rounds)
