--- a/server/internal/interface/dashboard/templates/main.templ
+++ b/server/internal/interface/dashboard/templates/main.templ
@@ -22,11 +22,11 @@ templ Layout(bodyContent templ.Component) {
 			<link rel="icon" href="static/favicon.svg" type="image/svg+xml"/>
 			<link rel="icon" href="static/favicon.png" sizes="any"/>
 			<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet"/>
-			<link href="static/styles.css" rel="stylesheet"/>
+			<link href="/static/styles.css" rel="stylesheet"/>
 		</head>
 		<body class="bg-white text-gray-800 p-10" onload={ BodyScripts() }>
 			@bodyContent
-			<script src="static/scripts.js"></script>
+			<script src="/static/scripts.js"></script>
 		</body>
 	</html>
 }
