bug fix on login form

--- a/server/internal/interface/dashboard/templates/pages/login.templ
+++ b/server/internal/interface/dashboard/templates/pages/login.templ
@@ -12,7 +12,7 @@ templ LoginBodyContent() {
 				</div>
 				<div>
 					<p>Password</p>
-					<input name="password"/>
+					<input name="password" type="password"/>
 				</div>
 				<button type="submit">Login</button>
 			</div>
