--- a/simulation/web/templates/index.html
+++ b/simulation/web/templates/index.html
@@ -369,6 +369,7 @@
     function setupEventHandlers(es) {
         es.addEventListener('message', function(e) {
             if (e.data) {
+                lastPingTime = Date.now();
                 appendToTerminal(e.data);
             }
         });
